# 315-game-staticlightningdragons

./: .gitignore  README.md
client/: game.js  index.html  main.js  style.css
client/MediaAssets/tileMaps/: map1.json
client/assets/audio/music/: battle.m4a  intro.m4a
client/assets/audio/soundeffects/: accreditation.txt
client/assets/js/: HealthBar.standalone.js  game.js  gameid.js  gameover.js  healthbar.js  load.js  main.js  map2.json  menu.js  preload.js  select.js  tutorial.js  username.js
client/assets/js/tmp/: game.js
client/src/html_css/: index.html  style.css
client/src/html_css/js/: game.js  main.js  menu.js
client/src/html_css/js/jsons/: map1.json
client/src/tmp/: game.js  index.html
server/: CMakeLists.txt
server/include/: AssignState.hpp  Connection.hpp  Event.hpp  Game.hpp  GameState.hpp  GenericResponses.hpp  LogWriter.hpp  MapInfo.hpp  NetworkManager.hpp  Player.hpp  PlayingState.hpp  RematchState.hpp  RequestVerification.hpp  SelectionState.hpp  TileInfo.hpp  Unit.hpp  UnitFactory.hpp
server/src/: AssignState.cpp  Connection.cpp  Effect.cpp  Game.cpp  GameState.cpp  GenericResponses.cpp  LogWriter.cpp  LogWriter.hpp  MapInfo.cpp  NetworkManager.cpp  Player.cpp  PlayingState.cpp  RematchState.cpp  RequestVerification.cpp  SelectionState.cpp  TileInfo.cpp  Unit.cpp  UnitFactory.cpp  effect.h  event.h  gamestate.cpp  gamestate.h  main.cpp  network.cpp  player.cpp  player.h  tileinfo.cpp  tileinfo.h  unit.cpp  unit.h  unitfactory.h
